# TED12-Project

./: F1.db  README.md  main.py  models.py  pyproject.toml
static/css/: main.css
templates/: 404.html  all_drivers.html  all_teams.html  all_tracks.html  driver.html  footer.html  header.html  home.html  layout.html  nav.html  team.html  track.html
