[tool.poetry]
name = "repl_python3_Programming-assessment-SamFirth1"
version = "0.1.0"
description = ""
authors = ["SamFirth1 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.1"
Flask-Login = "^0.6.0"
Flask-SQLAlchemy = "^2.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
